[package]
name = "surface-dial-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wayland
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
calloop = "0.13"
calloop-wayland-source = "0.3"

# D-Bus (tokio executor, no smol)
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros"] }
futures-util = "0.3"

# Rendering
tiny-skia = "0.11"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling / logging
anyhow = "1"
log = "0.4"
env_logger = "0.11"
